# amplifier-bundle-python-dev

./: README.md  bundle.yaml  pyproject.toml
agents/: code-intel.md  python-dev.md
behaviors/: python-dev.yaml  python-lsp.yaml
context/: PYTHON_BEST_PRACTICES.md  python-dev-instructions.md  python-lsp.md
docs/: ROADMAP.md
modules/hooks-python-check/: pyproject.toml
modules/hooks-python-check/amplifier_module_hooks_python_check/: __init__.py
modules/tool-python-check/: pyproject.toml
modules/tool-python-check/amplifier_module_tool_python_check/: __init__.py
src/amplifier_bundle_python_dev/: __init__.py  checker.py  cli.py  config.py  models.py
tests/: test_bundle_composition.py
