[project]
name = "amplifier-bundle-python-dev"
version = "0.1.0"
description = "Comprehensive Python development tools for Amplifier - code quality, LSP, and expert agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Microsoft", email = "amplifier@microsoft.com" }
]
keywords = [
    "amplifier",
    "python",
    "linting",
    "type-checking",
    "code-quality",
    "ruff",
    "pyright",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

# No CLI entry point - this is a library + bundle, not a standalone tool
# Tool functionality is provided via modules/tool-python-check/

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-bundle-python-dev"
Documentation = "https://github.com/microsoft/amplifier-bundle-python-dev#readme"
Repository = "https://github.com/microsoft/amplifier-bundle-python-dev"
Issues = "https://github.com/microsoft/amplifier-bundle-python-dev/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_bundle_python_dev"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/modules",
    "/behaviors",
    "/agents",
    "/context",
    "/docs",
    "/bundle.yaml",
    "/README.md",
    "/LICENSE",
]

# =============================================================================
# Tool Configurations (dogfooding our own standards)
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "modules"]

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # Line too long (formatter handles this)
    "B008",   # Function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["amplifier_bundle_python_dev"]
force-single-line = true
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

exclude = [
    "**/.venv",
    "**/node_modules",
    "**/__pycache__",
    "**/build",
    "**/dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

# =============================================================================
# Our own configuration (used by the checker)
# =============================================================================

[tool.amplifier-python-dev]
enable_ruff_format = true
enable_ruff_lint = true
enable_pyright = true
enable_stub_check = true

exclude_patterns = [
    ".venv/**",
    "__pycache__/**",
    "build/**",
    "dist/**",
]

[tool.amplifier-python-dev.hook]
enabled = true
file_patterns = ["*.py"]
report_level = "warning"
auto_inject = true
