[project]
name = "amplifier-module-hooks-python-check"
version = "0.1.0"
description = "Hook module for automatic Python code checking on file events"
requires-python = ">=3.11"
# No runtime dependencies - amplifier-core and amplifier-bundle-python-dev
# are peer dependencies provided by the host application
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_python_check"]
