[project]
name = "amplifier-module-tool-python-check"
version = "0.1.0"
description = "Python code quality check tool for Amplifier agents"
requires-python = ">=3.11"
dependencies = [
    "amplifier-core",
    "amplifier-bundle-python-dev",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
amplifier-bundle-python-dev = { git = "https://github.com/microsoft/amplifier-bundle-python-dev", branch = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_python_check"]
