[project]
name = "amplifier-module-tool-python-check"
version = "0.1.0"
description = "Python code quality check tool for Amplifier agents"
requires-python = ">=3.11"
# No runtime dependencies - amplifier-core and amplifier-bundle-python-dev
# are peer dependencies provided by the host application
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_python_check"]
